Need Fixed : AnnotationList and Feature
Need fixed: Feature class is not implemented correctly. Also all class
related to AnnotationList (the problem seems in the T)

--- a/QUT.Bio.BioPatML/QUT.Bio.BioPatML.csproj
+++ b/QUT.Bio.BioPatML/QUT.Bio.BioPatML.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Patterns\Logic.cs" />
     <Compile Include="Patterns\PatternComplex.cs" />
     <Compile Include="Patterns\PatternList.cs" />
+    <Compile Include="Patterns\Profile.cs" />
+    <Compile Include="Patterns\ProfileAll.cs" />
+    <Compile Include="Patterns\ProfileBest.cs" />
+    <Compile Include="Patterns\ProfileElement.cs" />
     <Compile Include="Patterns\Prosite.cs" />
     <Compile Include="Patterns\PWM.cs" />
     <Compile Include="Patterns\RegularExp.cs" />
@@ -66,9 +70,13 @@
     <Compile Include="Patterns\RepeatBase.cs" />
     <Compile Include="Patterns\RepeatDirect.cs" />
     <Compile Include="Patterns\RepeatInverted.cs" />
+    <Compile Include="Patterns\Series.cs" />
+    <Compile Include="Patterns\SeriesAll.cs" />
+    <Compile Include="Patterns\SeriesBest.cs" />
+    <Compile Include="Patterns\Set.cs" />
+    <Compile Include="Patterns\SetAll.cs" />
+    <Compile Include="Patterns\SetBest.cs" />
     <Compile Include="Patterns\Use.cs" />
-    <Compile Include="Sequences.Annotations\Annotation.cs" />
-    <Compile Include="Sequences.Annotations\AnnotationList.cs" />
     <Compile Include="Common.XML\IToXml.cs" />
     <Compile Include="Common.XML\IXmlConvertable.cs" />
     <Compile Include="Common.XML\XMLHelper.cs" />
@@ -93,11 +101,12 @@
     <Compile Include="Patterns\Reader.cs" />
     <Compile Include="Patterns\VoidPattern.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sequences.Annotation\AnnotatedList.cs" />
-    <Compile Include="Sequences.Annotation\FeatureList.cs" />
-    <Compile Include="Sequences.Annotation\IAnnotated.cs" />
-    <Compile Include="Sequences.Annotation\RegionList.cs" />
-    <Compile Include="Sequences.Annotation\SequenceList.cs" />
+    <Compile Include="Sequence.Annotations\Annotation.cs" />
+    <Compile Include="Sequence.Annotations\AnnotationList.cs" />
+    <Compile Include="Sequence.List\AnnotatedList.cs" />
+    <Compile Include="Sequence.List\FeatureList.cs" />
+    <Compile Include="Sequence.List\IAnnotated.cs" />
+    <Compile Include="Sequence.List\SequenceList.cs" />
     <Compile Include="Sequence\Feature.cs" />
     <Compile Include="Sequence\Strand.cs" />
     <Compile Include="Statistic\HistogramSymbol.cs" />
